test/TestPhases/parser/invalid/eofinlastlinecomment.blc

@[EntryPoint]
activity Main () // bla
    await true
end /* blabla